--- a/index.html
+++ b/index.html
@@ -1,1 +1,134 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Rules for the MineSting server - Stay informed, play fair, and have fun!">
+    <link rel="icon" href="https://media.discordapp.net/attachments/1330256924263845999/1333127111208079423/MinestingLOGO_MS.png?ex=6797c2df&is=6796715f&hm=bc6c41574e216b923a69986d9faf62d213c78eee0a15421d9d3d1ca9fdbf9a0a&=&format=webp&quality=lossless&width=768&height=768">
+    <title>MineSting Server Rules</title>
+    <style>
+        body {
+            margin: 0;
+            font-family: Arial, sans-serif;
+            background-color: #1a202c;
+            color: #f7fafc;
+        }
+        header {
+            background-color: #2d3748;
+            padding: 1rem;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            position: fixed;
+            width: 100%;
+            top: 0;
+            z-index: 1000;
+        }
+        .menu {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+        .menu img {
+            width: 50px;
+            height: 50px;
+            cursor: pointer;
+        }
+        main {
+            padding: 6rem 1rem 1rem;
+            max-width: 800px;
+            margin: 0 auto;
+        }
+        .section {
+            background-color: #2d3748;
+            padding: 1rem;
+            border-radius: 8px;
+            margin-bottom: 1rem;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        }
+        .section h3 {
+            margin-bottom: 0.5rem;
+            color: #63b3ed;
+        }
+        footer {
+            text-align: center;
+            color: #a0aec0;
+            margin-top: 2rem;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <div class="menu">
+            <div></div>
+            <img src="https://media.discordapp.net/attachments/1330256924263845999/1333127111208079423/MinestingLOGO_MS.png?ex=6797c2df&is=6796715f&hm=bc6c41574e216b923a69986d9faf62d213c78eee0a15421d9d3d1ca9fdbf9a0a&=&format=webp&quality=lossless&width=768&height=768" alt="MineSting Logo" onclick="scrollToTop()">
+            <div></div>
+        </div>
+    </header>
 
+    <main>
+        <section class="section">
+            <h2 class="text-2xl font-bold mb-4">Welcome to MineSting!</h2>
+            <p>Here are the rules you need to follow to keep the server fun and enjoyable for everyone.</p>
+        </section>
+
+        <section class="section">
+            <h3>Rule 1</h3>
+            <p>Placeholder for rule description.</p>
+        </section>
+
+        <section class="section">
+            <h3>Rule 2</h3>
+            <p>Placeholder for rule description.</p>
+        </section>
+
+        <section class="section">
+            <h3>Rule 3</h3>
+            <p>Placeholder for rule description.</p>
+        </section>
+
+        <section class="section">
+            <h3>Rule 4</h3>
+            <p>Placeholder for rule description.</p>
+        </section>
+
+        <section class="section">
+            <h3>Rule 5</h3>
+            <p>Placeholder for rule description.</p>
+        </section>
+
+        <section class="section">
+            <h3>Rule 6</h3>
+            <p>Placeholder for rule description.</p>
+        </section>
+
+        <section class="section">
+            <h3>Rule 7</h3>
+            <p>Placeholder for rule description.</p>
+        </section>
+
+        <section class="section">
+            <h3>Rule 8</h3>
+            <p>Placeholder for rule description.</p>
+        </section>
+
+        <section class="section">
+            <h3>Rule 9</h3>
+            <p>Placeholder for rule description.</p>
+        </section>
+
+        <section class="section">
+            <h3>Rule 10</h3>
+            <p>Placeholder for rule description.</p>
+        </section>
+
+        <footer>
+            <p>&copy; 2025 MineSting. All rights reserved.</p>
+        </footer>
+    </main>
+
+    <script>
+        function scrollToTop() {
+            window.scrollTo({ top: 0, behavior: 'smooth' });
+        }
+    </script>
+</body>
+</html>
