--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
         body {
             margin: 0;
             font-family: Arial, sans-serif;
-            background-color: #1a202c;
+            background: url('https://blog.shockbyte.com/content/images/2023/02/Minecraft-Server-Hosting.jpg') no-repeat center center fixed;
+            background-size: cover;
             color: #f7fafc;
         }
         header {
-            background-color: #2d3748;
+            background-color: rgba(47, 79, 79, 0.8);
             padding: 1rem;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             position: fixed;
@@ -32,21 +33,40 @@
             height: 50px;
             cursor: pointer;
         }
+        .menu a {
+            color: #f7fafc;
+            text-decoration: none;
+            font-size: 1rem;
+            margin: 0 1rem;
+            transition: color 0.3s ease;
+        }
+        .menu a:hover {
+            color: #ffd700;
+        }
         main {
             padding: 6rem 1rem 1rem;
             max-width: 800px;
             margin: 0 auto;
         }
         .section {
-            background-color: #2d3748;
+            background-color: rgba(85, 107, 47, 0.9);
             padding: 1rem;
             border-radius: 8px;
             margin-bottom: 1rem;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            transition: all 0.3s ease;
         }
-        .section h3 {
-            margin-bottom: 0.5rem;
-            color: #63b3ed;
+        .section:hover {
+            transform: scale(1.02);
+            background-color: rgba(107, 142, 35, 1);
+        }
+        .section p {
+            display: none;
+            margin-top: 0.5rem;
+            color: #f0e68c;
+        }
+        .section:hover p {
+            display: block;
         }
         footer {
             text-align: center;
@@ -58,7 +78,7 @@
 <body>
     <header>
         <div class="menu">
-            <div></div>
+            <a href="https://discord.gg/ND9HfeysCP" target="_blank">Join our Discord</a>
             <img src="https://media.discordapp.net/attachments/1330256924263845999/1333127111208079423/MinestingLOGO_MS.png?ex=6797c2df&is=6796715f&hm=bc6c41574e216b923a69986d9faf62d213c78eee0a15421d9d3d1ca9fdbf9a0a&=&format=webp&quality=lossless&width=768&height=768" alt="MineSting Logo" onclick="scrollToTop()">
             <div></div>
         </div>
@@ -72,52 +92,52 @@
 
         <section class="section">
             <h3>Rule 1</h3>
-            <p>Placeholder for rule description.</p>
+            <p>This rule will explain respectful behavior and good conduct.</p>
         </section>
 
         <section class="section">
             <h3>Rule 2</h3>
-            <p>Placeholder for rule description.</p>
+            <p>This rule will explain cheating prevention and fair play.</p>
         </section>
 
         <section class="section">
             <h3>Rule 3</h3>
-            <p>Placeholder for rule description.</p>
+            <p>This rule will explain keeping chat clean and appropriate.</p>
         </section>
 
         <section class="section">
             <h3>Rule 4</h3>
-            <p>Placeholder for rule description.</p>
+            <p>This rule will explain the importance of listening to staff instructions.</p>
         </section>
 
         <section class="section">
             <h3>Rule 5</h3>
-            <p>Placeholder for rule description.</p>
+            <p>This rule will explain griefing and its consequences.</p>
         </section>
 
         <section class="section">
             <h3>Rule 6</h3>
-            <p>Placeholder for rule description.</p>
+            <p>This rule will explain common sense and responsible gameplay.</p>
         </section>
 
         <section class="section">
             <h3>Rule 7</h3>
-            <p>Placeholder for rule description.</p>
+            <p>This rule will explain protecting others' builds and respecting creativity.</p>
         </section>
 
         <section class="section">
             <h3>Rule 8</h3>
-            <p>Placeholder for rule description.</p>
+            <p>This rule will explain avoiding spam and misuse of server resources.</p>
         </section>
 
         <section class="section">
             <h3>Rule 9</h3>
-            <p>Placeholder for rule description.</p>
+            <p>This rule will explain appropriate use of mods and plugins.</p>
         </section>
 
         <section class="section">
             <h3>Rule 10</h3>
-            <p>Placeholder for rule description.</p>
+            <p>This rule will explain overall community guidelines.</p>
         </section>
 
         <footer>
