--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         body {
             margin: 0;
             font-family: Arial, sans-serif;
-            background: url('https://blog.shockbyte.com/content/images/2023/02/Minecraft-Server-Hosting.jpg') no-repeat center center fixed;
+            background: linear-gradient(135deg, #556b2f, #6b8e23, #8fbc8f);
             background-size: cover;
             color: #f7fafc;
         }
@@ -57,7 +57,7 @@
             transition: all 0.3s ease;
         }
         .section:hover {
-            transform: scale(1.02);
+            transform: translateY(-5px);
             background-color: rgba(107, 142, 35, 1);
         }
         .section p {
